// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`multiple-routes > bundler: vite > build and serve > should generate the expected files 1`] = `
{
  "AsyncComponent-C5AHhqm_.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent-C5AHhqm_.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Details-DEuzHRSI.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Details-DEuzHRSI.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Details-DGJnH813.css": ._1hpn1da0 {
  color: #00f;
}
,
  "Home-B4Am_Pmc.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Home-B4Am_Pmc.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "Home-D-106MY_.css": .ms22la0 {
  color: red;
}
,
  "production/au/details/$id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/vite-client-5_tId46l.js",
    "/static/place/Details-DEuzHRSI.js",
    "/static/place/AsyncComponent-C5AHhqm_.js",
  ]
CSS: [
    "/static/place/Details-DGJnH813.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="CSS[0]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[1]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[2]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[3]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      type="module"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[1]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/vite-client-5_tId46l.js",
    "/static/place/Home-B4Am_Pmc.js",
  ]
CSS: [
    "/static/place/Home-D-106MY_.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="CSS[0]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[1]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[2]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      type="module"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[1]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/details/:id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/vite-client-5_tId46l.js",
    "/static/place/Details-DEuzHRSI.js",
    "/static/place/AsyncComponent-C5AHhqm_.js",
  ]
CSS: [
    "/static/place/Details-DGJnH813.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="CSS[0]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[1]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[2]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[3]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      type="module"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[1]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/vite-client-5_tId46l.js",
    "/static/place/Home-B4Am_Pmc.js",
  ]
CSS: [
    "/static/place/Home-D-106MY_.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="CSS[0]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[1]"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="SCRIPTS[2]"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      type="module"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      type="module"
      src="SCRIPTS[1]"
    >
    </script>
  </body>
</html>,
  "vite-client-5_tId46l.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vite-client-5_tId46l.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes > bundler: vite > build and serve > should render details page correctly 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="/static/place/Details-DGJnH813.css"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="/static/place/vite-client-5_tId46l.js"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="/static/place/Details-DEuzHRSI.js"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="/static/place/AsyncComponent-C5AHhqm_.js"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      type="module"
      src="/static/place/AsyncComponent-C5AHhqm_.js"
    >
    </script>
    <script
      type="module"
      src="/static/place/Details-DEuzHRSI.js"
    >
    </script>
    <script
      type="module"
      src="/static/place/vite-client-5_tId46l.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -47,7 +47,7 @@
   <body>
     <div id="app">
       <h1 class="_1hpn1da0">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>
`;

exports[`multiple-routes > bundler: vite > build and serve > should render home page correctly 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      rel="stylesheet"
      href="/static/place/Home-D-106MY_.css"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="/static/place/vite-client-5_tId46l.js"
      crossorigin
    >
    <link
      rel="modulepreload"
      href="/static/place/Home-B4Am_Pmc.js"
      crossorigin
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      type="module"
      src="/static/place/Home-B4Am_Pmc.js"
    >
    </script>
    <script
      type="module"
      src="/static/place/vite-client-5_tId46l.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`multiple-routes > bundler: vite > start > should render details page correctly 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-Z2/iFzh9VMlVkEOar1f/oSHWwQk3ve1qk/C2WdsC4Xk=' 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <script type="module">
      import { injectIntoGlobalHook } from "/@react-refresh";
injectIntoGlobalHook(window);
window.$RefreshReg$ = () => {};
window.$RefreshSig$ = () => (type) => type;
    </script>
    <script
      type="module"
      src="/@vite/client"
    >
    </script>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <script
      type="module"
      src="/@id/__x00__/index.html?html-proxy&index=0.js"
    >
    </script>
    <script
      type="module"
      src="/@id/__x00__/index.html?html-proxy&index=1.js"
    >
    </script>
  </head>
  <body>
    <div id="app">
      <h1 class="Details_root__1hpn1da0">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      type="module"
      src="{cwd}/packages/sku/dist/services/vite/entries/vite-client.js"
    >
    </script>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -36,19 +36,27 @@
     </style>
     <script
       type="module"
-      src="/@id/__x00__/index.html?html-proxy&index=0.js"
+      src="/@id/__x00__/index.html?html-proxy&amp;index=0.js"
     >
     </script>
     <script
       type="module"
-      src="/@id/__x00__/index.html?html-proxy&index=1.js"
+      src="/@id/__x00__/index.html?html-proxy&amp;index=1.js"
     >
     </script>
+    <style
+      type="text/css"
+      data-vite-dev-id="{cwd}/fixtures/multiple-routes/src/handlers/Details.css.js.vanilla.css"
+    >
+      .Details_root__1hpn1da0 {
+  color: blue;
+}
+    </style>
   </head>
   <body>
     <div id="app">
       <h1 class="Details_root__1hpn1da0">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>
`;

exports[`multiple-routes > bundler: vite > start > should render home page correctly 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-Z2/iFzh9VMlVkEOar1f/oSHWwQk3ve1qk/C2WdsC4Xk=' 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <script type="module">
      import { injectIntoGlobalHook } from "/@react-refresh";
injectIntoGlobalHook(window);
window.$RefreshReg$ = () => {};
window.$RefreshSig$ = () => (type) => type;
    </script>
    <script
      type="module"
      src="/@vite/client"
    >
    </script>
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <script
      type="module"
      src="/@id/__x00__/index.html?html-proxy&index=0.js"
    >
    </script>
    <script
      type="module"
      src="/@id/__x00__/index.html?html-proxy&index=1.js"
    >
    </script>
  </head>
  <body>
    <div id="app">
      <h1 class="Home_root__ms22la0">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      type="module"
      src="{cwd}/packages/sku/dist/services/vite/entries/vite-client.js"
    >
    </script>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -36,14 +36,22 @@
     </style>
     <script
       type="module"
-      src="/@id/__x00__/index.html?html-proxy&index=0.js"
+      src="/@id/__x00__/index.html?html-proxy&amp;index=0.js"
     >
     </script>
     <script
       type="module"
-      src="/@id/__x00__/index.html?html-proxy&index=1.js"
+      src="/@id/__x00__/index.html?html-proxy&amp;index=1.js"
     >
     </script>
+    <style
+      type="text/css"
+      data-vite-dev-id="{cwd}/fixtures/multiple-routes/src/handlers/Home.css.js.vanilla.css"
+    >
+      .Home_root__ms22la0 {
+  color: red;
+}
+    </style>
   </head>
   <body>
     <div id="app">
`;

exports[`multiple-routes > bundler: webpack > build and serve > should generate the expected files 1`] = `
{
  "5.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "5.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-791506971640531b9f92.css": ._1hpn1da0 {
  color: blue;
}

/*# sourceMappingURL=handlers-Details-791506971640531b9f92.css.map*/
,
  "handlers-Details-791506971640531b9f92.css.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home-2d237e279ab26e7d9ff4.css": .ms22la0 {
  color: red;
}

/*# sourceMappingURL=handlers-Home-2d237e279ab26e7d9ff4.css.map*/
,
  "handlers-Home-2d237e279ab26e7d9ff4.css.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home.chunk.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home.chunk.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/$id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Details.chunk.js",
    "/static/place/AsyncComponent.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Details-791506971640531b9f92.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="CSS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="SCRIPTS[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="SCRIPTS[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="SCRIPTS[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="SCRIPTS[5]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Home.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Home-2d237e279ab26e7d9ff4.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="CSS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="SCRIPTS[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="SCRIPTS[4]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/details/:id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Details.chunk.js",
    "/static/place/AsyncComponent.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Details-791506971640531b9f92.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="CSS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="SCRIPTS[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="SCRIPTS[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="SCRIPTS[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="SCRIPTS[5]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime.js",
    "/static/place/5.js",
    "/static/place/main.js",
    "/static/place/handlers-Home.chunk.js",
  ]
CSS: [
    "/static/place/handlers-Home-2d237e279ab26e7d9ff4.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="SCRIPTS[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="CSS[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="SCRIPTS[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="SCRIPTS[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="SCRIPTS[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="SCRIPTS[4]"
    >
    </script>
  </body>
</html>,
  "runtime.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime.js.map": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes > bundler: webpack > build and serve > should render details page correctly 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="/static/place/handlers-Details-791506971640531b9f92.css"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/place/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/place/5.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/place/main.js"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="/static/place/handlers-Details.chunk.js"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="/static/place/AsyncComponent.chunk.js"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="_1hpn1da0">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="/static/place/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/static/place/5.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/static/place/main.js"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="/static/place/handlers-Details.chunk.js"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="/static/place/AsyncComponent.chunk.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -62,7 +62,7 @@
   <body>
     <div id="app">
       <h1 class="_1hpn1da0">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>
`;

exports[`multiple-routes > bundler: webpack > build and serve > should render home page correctly 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="/static/place/handlers-Home-2d237e279ab26e7d9ff4.css"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/place/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/place/5.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/static/place/main.js"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="/static/place/handlers-Home.chunk.js"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="ms22la0">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="/static/place/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/static/place/5.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/static/place/main.js"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="/static/place/handlers-Home.chunk.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`multiple-routes > bundler: webpack > start > should render details page correctly 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=' 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="/handlers-Details.css"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/5.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/main.js"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="/handlers-Details.js"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="/AsyncComponent.js"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Details_root__1hpn1da0">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [1,0]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/5.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/main.js"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="/handlers-Details.js"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="/AsyncComponent.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
===================================================================
--- sourceHtml
+++ clientHtml
@@ -62,7 +62,7 @@
   <body>
     <div id="app">
       <h1 class="Details_root__1hpn1da0">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>
`;

exports[`multiple-routes > bundler: webpack > start > should render home page correctly 1`] = `
<!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=' 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="https://code.jquery.com/jquery-3.5.0.slim.min.js">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="/handlers-Home.css"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/runtime.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/5.js"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="/main.js"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="/handlers-Home.js"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Home_root__ms22la0">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [2]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="/runtime.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/5.js"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="/main.js"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="/handlers-Home.js"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
